# ARIA-Stark

./: .gitignore
.github/workflows/: deploy.yml
_bmad-output/implementation-artifacts/: 1-1-backend-scaffold-with-playwright-docker-image.md  1-2-frontend-scaffold-with-dark-theme-and-design-tokens.md  sprint-status.yaml  (+15 more)
aria-backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
aria-backend/agents/: __init__.py  executor_agent.py  planner_agent.py  root_agent.py
aria-backend/handlers/: __init__.py  audit_writer.py  sse_handler.py  voice_handler.py
aria-backend/prompts/: executor_system.py  planner_system.py
aria-backend/routers/: task_router.py
aria-backend/services/: __init__.py  executor_service.py  gcs_service.py  input_queue_service.py  planner_service.py  replan_service.py  session_service.py  sse_service.py  task_complete_service.py  voice_instruction_service.py  voice_service.py
aria-backend/tests/: conftest.py  test_audit_writer.py  test_barge_in_endpoint.py  test_executor_agent.py  test_executor_service.py  test_healthz.py  test_input_queue_service.py  test_planner_agent.py  test_playwright_computer.py  test_replan_service.py  test_session_service.py  test_sse_handler.py  test_sse_service.py  test_task_router.py  test_voice_handler.py  test_voice_instruction_service.py
aria-backend/tools/: __init__.py  playwright_computer.py
aria-frontend/: .env.example  .firebaserc  firebase.json  firestore.rules  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
(+63 files in other folders)
